--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: sihao.huang@alumni.duke.edu
   facebook:
   flickr:
-  github: https://github.com/HuangSao
+  github: HuangSao
   instagram:
   linkedin:
   pinterest:
